changed feature classes

--- a/Projekt_Karlo_Sutalo.ipynb
+++ b/Projekt_Karlo_Sutalo.ipynb
@@ -164,8 +164,8 @@
     " - Result* - ciljani razred - služi li stranica za phishing\n",
     "\n",
     "\n",
-    "*značajka je podijeljena u dvije klase: (-1: signurno, 1: phishing)\n",
-    "**značajka je podijeljena u tri klase: (-1: signurno, 0: sumnjivo, 1: phishing)"
+    "*značajka je podijeljena u dvije klase: (-1: phishing, 1: sigurno)\n",
+    "**značajka je podijeljena u tri klase: (-1: phishing, 0: sumnjivo, 1: sigurno)"
    ],
    "metadata": {
     "collapsed": false
